--- a/06 EJS/views/blog.ejs
+++ b/06 EJS/views/blog.ejs
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+  <meta charset="UTF-8">
   <title>
     <%= blog.title %>
   </title>
+  <link rel="stylesheet" href="/styles.css">
 </head>
 
 <body>
-  <h1>
+  <div class="menu">
+    <a href="/">Home</a>
+    <a href="/about">About</a>
+    <a href="/contact">Contact</a>
+  </div>
+  <h1 class="title">
     <%= blog.title %>
   </h1>
-  <p>
+  <p class="description">
     <%= blog.description %>
   </p>
-  <p>
-    <%= blog.body %>
+  <p class="content">
+    <%= blog.content %>
   </p>
 </body>
 
