--- a/06 EJS/views/index.ejs
+++ b/06 EJS/views/index.ejs
@@ -3,15 +3,21 @@
 
 <head>
   <title>My Blog</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <h1>Welcome to My Blog</h1>
+  <div class="menu">
+    <a href="/">Home</a>
+    <a href="/about">About</a>
+    <a href="/contact">Contact</a>
+  </div>
+  <h1 class="title">Welcome to My Blog</h1>
   <% blogs.forEach(blog=> { %>
-    <h2>
+    <h2 class="subtitle">
       <%= blog.title %>
     </h2>
-    <p>
+    <p class="description">
       <%= blog.description %>
     </p>
     <% }) %>
