--- a/06 EJS/public/styles.css
+++ b/06 EJS/public/styles.css
@@ -28,7 +28,7 @@ a {
 /* Menu */
 .menu {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   background-color: #f8f9fa;
   padding: 1rem;
@@ -36,6 +36,50 @@ a {
 
 .menu a {
   margin-right: 1rem;
+  padding: 0 2.5rem;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 50px;
+  padding: 0 2.5rem;
+}
+
+label {
+  margin-top: 20px;
+  font-size: 18px;
+}
+
+input[type="text"],
+input[type="email"],
+textarea {
+  padding: 10px;
+  border: 2px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+  width: 100%;
+  margin-top: 10px;
+}
+
+textarea {
+  height: 150px;
+}
+
+button[type="submit"] {
+  margin-top: 20px;
+  padding: 10px 20px;
+  background-color: #4285f4;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+button[type="submit"]:hover {
+  background-color: #2d76f2;
 }
 
 /* Responsive */
