--- a/06 EJS/views/blog.ejs
+++ b/06 EJS/views/blog.ejs
@@ -15,14 +15,14 @@
     <a href="/about">About</a>
     <a href="/contact">Contact</a>
   </div>
-  <h1 class="title">
+  <h1 class="blog-title">
     <%= blog.title %>
   </h1>
-  <p class="description">
+  <p class="blog-description">
     <%= blog.description %>
   </p>
-  <p class="content">
-    <%= blog.content %>
+  <p class="blog-content">
+    <%= blog.body %>
   </p>
 </body>
 
